--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Hassan Fawaz, Ph.D. - Research Engineer"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Hassan Fawaz"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://Hassan-Fawaz.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "Hassan-Fawaz/Hassan-Fawaz.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
