--- a/_config.yml
+++ b/_config.yml
@@ -21,21 +21,21 @@ repository               : "Hassan-Fawaz/Hassan-Fawaz.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Hassan Fawaz"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "Research Engineer in Wireless Networks"
+  location         : "Île-de-France, France"
+  employer         : "Télécom SudParis"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "hassan1fawaz@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=fYq4FI0AAAAJ&hl=en"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+  orcid            : "https://orcid.org/0000-0002-0149-7878"
+  pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  researchgate     : "https://www.researchgate.net/profile/Hassan-Fawaz-4"
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
