--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Hassan Fawaz, Ph.D. - Research Engineer"
 title_separator          : "-"
 name                     : &name "Hassan Fawaz"
-description              : &description "personal description"
+description              : &description "Research Engineer"
 url                      : https://Hassan-Fawaz.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Hassan-Fawaz/Hassan-Fawaz.github.io"
