--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@
 locale                   : "en-US"
 title                    : "Home"
 title_separator          : "-"
-name                     : &name "Hassan Fawaz, Ph.D."
-description              : &description "Research Engineer"
+name                     : &name "Hassan Fawaz"
+description              : &description "Ph.D., Research Engineer"
 url                      : https://Hassan-Fawaz.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Hassan-Fawaz/Hassan-Fawaz.github.io"
