--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ staticman:
       type               : "date"
       options:
         format           : "iso8601" # "iso8601" (default), "timestamp-seconds", "timestamp-milliseconds"
-#atom_feed:
+atom_feed:
  # path                   : # blank (default) uses feed.xml
 
 
