--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Home"
 title_separator          : "-"
 name                     : &name "Hassan Fawaz"
-description              : &description "Ph.D., Research Engineer"
+description              : &description "Research Engineer"
 url                      : https://Hassan-Fawaz.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Hassan-Fawaz/Hassan-Fawaz.github.io"
@@ -21,7 +21,7 @@ repository               : "Hassan-Fawaz/Hassan-Fawaz.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Hassan Fawaz"
+  name             : "Hassan Fawaz, Ph.D."
   pronouns         : # example: "she/her"  
   bio              : "Research Engineer in Wireless Networks"
   location         : "Île-de-France, France"
