--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ author:
   avatar           : "profile.png"
   name             : "Hassan Fawaz, Ph.D."
   pronouns         : # example: "she/her"  
-  bio              : "Research Engineer in Wireless Networks"
+  bio              : "5G Software Architect, Ground Segment Engineer"
   location         : "Île-de-France, France"
-  employer         : "Télécom SudParis"
+  employer         : "Univity"
   uri              : # URL
   email            : "hassan1fawaz@gmail.com" 
 
